# ai-agent

./: .gitignore  IMPLEMENTATION_COMPLETE.md  MANUAL_START.md  MANUAL_START_COMMANDS.md  NEXT_STEPS_COMPLETED.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  PHASE7_COMPLETE.md  PLAN.md  PROJECT_STATUS_REPORT.md  QUICK_START.md  QUICK_START_FINAL.md  README.md  SETUP_COMPLETE.md  STATUS.md  USER_FEATURES_REPORT.md
apps/core-api/: README.md  pyproject.toml
apps/core-api/alembic/: env.py
apps/core-api/alembic/versions/: 001_initial_schema.py  002_industries_agents_tools.py  003_documents.py  004_tasks.py  005_local_agents.py  006_task_metrics.py
apps/core-api/app/: auth.py  config.py  main.py  models.py  schemas.py
apps/core-api/app/middleware/: logging_middleware.py
apps/core-api/app/routers/: admin.py  agents.py  documents.py  industries.py  role_templates.py  tools.py
apps/core-api/app/services/: document_service.py  profile_service.py
apps/core-api/scripts/: seed_data.py
apps/local-agent/: README.md  example-config.yaml  pyproject.toml
apps/local-agent/phi_agent/: client.py  config.py  main.py  registry.py  worker.py
apps/local-agent/phi_agent/dashboard/: __init__.py  generator.py
apps/local-agent/phi_agent/tools/: __init__.py  base.py  dashboard.py  db.py  file.py  web.py
apps/orchestrator/: README.md  alembic.ini  pyproject.toml
apps/web/: README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
scripts/: start-all.sh  stop-all.sh
(+322 files in other folders)
